--- a/less/main.less
+++ b/less/main.less
@@ -1023,11 +1023,6 @@ input {
     }
   }
 }
-//@media screen and ( -webkit-min-device-pixel-ratio : 0 )	 {
-//  .class {
-//    color : #F00 ;
-//  }
-//}
 #conatcat-info {
   //background: #fff url(../images/contact.png) no-repeat 90% 0;
   //padding: 30px 0;
@@ -1044,47 +1039,43 @@ input {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
-    border: 7px solid #E84B37;
-
-    //&:before {
-    //  content: "";
-    //  position: absolute;
-    //  left: 0;
-    //  top: 0;
-    //  min-height: 300px;
-    //  width: 50%;
-    //  border-top: 7px solid #E84B37;
-    //  border-left: 7px solid #E84B37;
-    //  border-bottom: 7px solid #E84B37;
-    //  -webkit-box-sizing: border-box;
-    //  -moz-box-sizing: border-box;
-    //  box-sizing: border-box;
-    //}
-    //&:after {
-    //  content: "";
-    //  position: absolute;
-    //  left: 50%;
-    //  top: -7px;
-    //  min-height: 300px;
-    //  width: 50%;
-    //  border-top: 7px solid #C69667;
-    //  border-right: 7px solid #C69667;
-    //  border-bottom: 7px solid #C69667;
-    //  -webkit-box-sizing: border-box;
-    //  -moz-box-sizing: border-box;
-    //  box-sizing: border-box;
-    //}
-    .row {
-      &:after {
-        content: "";
-        left: 0;
-        top: 0;
-        width: 0;
-        height: 0;
-        border-top: 75px solid #E84B37;
-        border-right: 75px solid transparent;
-        position: absolute;
-      }
+    &:after {
+      content: "";
+      left: 0;
+      top: 0;
+      width: 0;
+      height: 0;
+      border-top: 75px solid #E84B37;
+      border-right: 75px solid transparent;
+      position: absolute;
+    }
+    .ram_1 {
+      content: "";
+      position: absolute;
+      left: 0;
+      top: 0;
+      min-height: 300px;
+      width: 50%;
+      border-top: 7px solid #E84B37;
+      border-left: 7px solid #E84B37;
+      border-bottom: 7px solid #E84B37;
+      -webkit-box-sizing: border-box;
+      -moz-box-sizing: border-box;
+      box-sizing: border-box;
+    }
+    .ram_2 {
+      content: "";
+      position: absolute;
+      left: 50%;
+      top: -7px;
+      min-height: 300px;
+      width: 50%;
+      border-top: 7px solid #C69667;
+      border-right: 7px solid #C69667;
+      border-bottom: 7px solid #C69667;
+      -webkit-box-sizing: border-box;
+      -moz-box-sizing: border-box;
+      box-sizing: border-box;
     }
   }
 }
