--- a/less/main.less
+++ b/less/main.less
@@ -2641,3 +2641,8 @@ td.row1 {
     font-size: 16px
   }
 }
+.adres_block {
+  border: 1px solid rgba(0, 0, 0, 0.30);
+  padding: 25px;
+  margin: 30px 0 ;
+}
